src/scss/Nav.scss
.nav-container {
  background: url(../images/open-law-background.png) no-repeat center center;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  background-position: top;
  min-height: 240px;
  position: relative;
  .nav-items {
    padding: 50px 5vw 0px 5vw;
    height: 100%;
      .nav-logo {
      float: left;
      width: 170px;
      z-index: -1;
    }
    img {
      display: none;
    }
    svg {
      margin-left: 0;
    }
    
  }
  
  .nav-menu {
    width: 100%;
    height: 100%;
    font-family: "Nunito Sans", sans-serif;
    font-size: 19px;
    font-weight: bold;
    nav {
      width: 100%;
      
      height: 50px;
      
      
      ul {

        position: absolute;
        bottom: 0;
        left: 2vw;
        margin-bottom: 0;

        .link-active {
          & { //prevents sec. nav being different height if no page is active
            margin-bottom: 0px;
          }
          border-bottom: 6px solid $openLawA11yBrown;
        }
        a {
          margin: 0 20px;
          display: inline-block;
          text-decoration: none;
          padding: 0px 5px 15px 5px;
          margin-bottom: 6px;
          
          &:hover {
            margin-bottom: 0px;  
            border-bottom: 6px solid $openLawA11yBrown;
          }

          li {
            color: #ffffff; 
            
          }
          
        }
      }
    }
  }
}


.nav-secondary {
  font-size: 18px;
  position: absolute;
  top: 50px;
  right: 6vw;
  margin-top: 20px;
  text-align: center;
  display: block;
  height: 50px;
  a {
    color: #ffffff;
    text-decoration: none;
  }
  .developers-text {
      font-size: 19px;
      padding: 10px 12px;
      border: 2px solid #fff;
  }
  .developers-icon {
    display: none;
  }
}

.nav-collapsed {
  background: url(../images/open-law-background.png) no-repeat center center;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  background-position: top;
  position: fixed;
  top: 0;
  width: 100vw;
  z-index: 101;

  .nav-items {
    padding: 5px 0px 0px 2vw;
      .nav-logo {
      float: left;
    }
    img {
      position: absolute;
      width: 40px;
      left: 2vw;
      top: 20%;
    }
    svg {
      display: none;
    }
    
  }
  
  .nav-menu {
    width: 100%;
    font-family: "Nunito Sans", sans-serif;
    font-size: 19px;
    font-weight: bold;
    nav {
      width: 100%;
      ul {
        margin-bottom: 0;
        .link-active {
          margin-bottom: 0px;
          
          border-bottom: 6px solid $openLawA11yBrown;
        }
        a {
          margin: 0 20px;
          display: inline-block;
          text-decoration: none;
          padding: 0px 5px 15px 5px;
          margin-bottom: 6px;
          
          &:hover {
            margin-bottom: 0px;  
            border-bottom: 6px solid $openLawA11yBrown;
          }

          li {
            color: #ffffff; 
            
          }
          
        }
      }
    }
  
  }
  .nav-search {
    display: none;
  }
  .nav-secondary {
    display: none;
  }
}


@media(max-width: 1024px) {
  .nav-secondary {
    .developers-text {
      display: none;
    }
    .developers-icon {
      display: block;
      img {
        position: absolute;
        height: 45px;
        bottom: 18px;
        right: 0;
      }
    }
    
  }
}

@media(max-width: 890px) {
  .nav-secondary {
    .developers-icon {
      display: none; // temp until a design is finalised for mobile view
    }
  }
}
.visuallyhidden {
  // hide from visual users, show for screen readers
  position: absolute !important;
  width: 1px;
  height: 1px;
  padding: 0;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap;
  clip-path: inset(50%);
  border: 0;

  &:focus {
    display: inline-block;
    padding: 15px 23px 14px;
    width: auto;
    height: auto;
    clip: auto;
    color: #000000;
    background-color: #ffffff;
    clip-path: unset;
  }
}

#menuToggle input {
  display: none;
}


@media (max-width: 890px) { 
  .nav-search {
    margin-top: 100px;
    padding-bottom: 10px;
  }
}

@media (max-width: 890px) { 
  #menuToggle {
    display: block;
    position: absolute;
    top: 0;
    right: 0;
    width: 100vw;
    height: 40px;

    -webkit-user-select: none;
    user-select: none;
  }

  #menuToggle input {
    &:checked {
      position: fixed;
    }
    display: block;
    width: 70px;
    height: 70px;
    position: absolute;
    top: 0;
    right: 0;
    z-index: 250;

    cursor: pointer;

    opacity: 0;

    -webkit-touch-callout: none;
  }

  #menuToggle span {
    display: block;
    width: 33px;
    height: 4px;
    margin-bottom: 5px;
    position: absolute;
    z-index: 205;
    right: 30px;
    top: 30px;

    background: $openWhite;
    border-radius: 3px;
    transform-origin: 4px 0px;

    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1),
      background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
  }

  .nav-collapsed {
    #menuToggle span {
      top: 20px;
    }
    #menuToggle input {
      height: 65px;
      width: 100px;
    }
  }
 

  #menuToggle span:first-child {
    transform-origin: 0% 0%;
  }

  #menuToggle span:nth-child(2) {
    transform: translate(0px, 10px);
  }

  #menuToggle span:nth-child(3) {
    transform: translate(0px, 20px);
  }

  #menuToggle input:checked ~ span {
    position: fixed;
    opacity: 1;
    transform: rotate(45deg) translate(0, 0);
    background: $openWhite;
  }

  #menuToggle input:checked ~ span:nth-child(2) {
    position: fixed;
    opacity: 0;
    transform: rotate(0deg) scale(0.2, 0.2);
  }

  #menuToggle input:checked ~ span:nth-child(3) {
    transform: rotate(-45deg) translate(-14px, 11px);
  }
  .nav-collapsed {
    height: 65px;
  }
  .nav-container {
    .nav-items {
      .nav-logo {
        position: absolute;
        top: 0;
        left: 0;
        z-index: 102;
        padding: 15px 6vw;
        width: 250px;
      }
    }
  }
  .nav-container, .nav-collapsed {
    .nav-menu {
      position: relative;
     
      nav {
        ul {
          left: 0;
          width: 90%;
          .link-active {
            border-bottom: 1px solid #d0d0d0;
          }
          
          position: relative;
          margin-left: 0;
          a {
            font-weight: 400;
            padding-top: 15px;
            border-bottom: 1px solid #d0d0d0;
            display: block;

            &:last-child {
              border-bottom: none;
            }
          }
        }
      }
    }
  }

  .nav-collapsing {
      position: fixed;
      z-index: 101;
      display: block;
      top: 0;
      left: 0;
      width: 100vw;
      height: 100vh;
      margin: 0;
      padding-top: 15vh;
      background: #2b6064;
      list-style-type: none;
      -webkit-font-smoothing: antialiased;

      overflow-y: scroll;
      max-height: 100vh;

      transform-origin: 0% 0%;
      transform: translate(-100%, 0);

      transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
  }

  #menuToggle input:checked ~ .nav-collapsing {
    transform: none;
  }

}





.tertiary-nav {
  @include nav-header;
  margin-top: 25px;
  width: 25vw;
  min-width: 300px;
  position: sticky;
  vertical-align: top;
  display: inline-block;
  height: 100%;
  top: 50px;
  background-color: $openWhite;
  font-weight: 700;
  font-size: 20px;
  margin-right: 5vw;
  .primary-menu {
    height: 100%;
    margin-left: 3vw;
    a {
      text-decoration: none;
      color: $openLawA11yTeal;
      &:hover {
        color: $openLawTeal;
      }
      
    }
  }

  

  .tertiary-item {
    width: 100%;
    padding: 10px 0 10px 10px;
    border-bottom: 1px solid $openLawLightBrown;
  }
  
  .tertiary-active {
    li {
      border-bottom: 4px solid $openLawLightBrown;
    }
  }


  .tertiary-sub-routes {
    padding-left: 1vw;
    li {
      font-size: 16px;
      padding-top: 10px;
      font-weight: 600;
    }
  }

  @media (max-width: 767px) {
    display: block;
  }
}

